--- a/template/digitization.html
+++ b/template/digitization.html
@@ -20,7 +20,7 @@
                 <li class="digization-list-item-infor">
                     <div>
                         <h1 ng-bind="item.viName"></h1>
-                        <h2 ng-if="showTab">山东省博物馆</h2>
+                        <h2 ng-if="showTab" ></h2>
                         <p ng-bind="item.viIntro" class="hide" ng-mouseover="showMore($event)" ng-mouseleave="hide($event)"></p>
                     </div>
                 </li>
