--- a/template/footer.html
+++ b/template/footer.html
@@ -11,7 +11,7 @@
     </li><li>
         <a href="http://www.sdmuseum.com/default.aspx" target="_blank">山东省博物馆</a>
     </li><li>
-        <a href="http://www.chinamuseum.org.cn/index.html" target="_blank">山东省博物馆协会</a>
+        <a href="http://www.chinamuseum.org.cn/index.html" target="_blank">中国博物馆协会</a>
 </ul>
 <p style="padding-top:22px;">
     <span style="font-size:12px;color:rgba(0,0,0,.7)">
