--- a/template/register.html
+++ b/template/register.html
@@ -44,11 +44,11 @@
             </tr>
             <tr>
                 <td><label for="">登录密码：</label></td>
-                <td><input ng-trim="true" type="text" ng-required="true" ng-model="password" name="password" ng-pattern="/^[0-9A-Za-z_]*$/" ng-minlength="8" ng-maxlength="18"></td>
+                <td><input ng-trim="true" type="password" ng-required="true" ng-model="password" name="password" ng-pattern="/^[0-9A-Za-z_]*$/" ng-minlength="8" ng-maxlength="18"></td>
             </tr>
             <tr>
                 <td><label for="">确认密码：</label></td>
-                <td><input ng-trim="true" type="text" ng-model="rpassword" name="rpassword" ng-required="true"></td>
+                <td><input ng-trim="true" type="password" ng-model="rpassword" name="rpassword" ng-required="true"></td>
             </tr>
             <tr>
                 <td></td>
