--- a/template/index_v_1.0.html
+++ b/template/index_v_1.0.html
@@ -44,12 +44,12 @@
             <ul>
                 <li style="margin:0;margin-bottom:20px;">
                     <div>
-                        <a href=""><img src="img/pic2.png" width="192" height="128" alt=""></a>
+                        <a href=""><img src="img/baike.png" width="192" height="128" alt=""></a>
                     </div>
                     <div style="width:200px;padding-left:19px;display: flex;flex-direction: column">
-                        <h3><a href="">玉猪龙</a></h3>
+                        <h3><a href="" style="color:rgba(0,0,0,.8)">蛋壳黑陶高柄杯</a></h3>
                         <p>
-                            我国古代对发现于红山等地的一种玉器的称呼，又名玉兽玦。
+                            是大汶口文化晚期和山东龙山文化的代表性器物之一，也是当时最高级的一种饮酒器。
                         </p>
                         <button>编辑词条</button>
                     </div>
@@ -59,7 +59,7 @@
                         <a href=""><img src="img/pic2.png" width="192" height="128" alt=""></a>
                     </div>
                     <div style="width:220px;padding-left:19px;">
-                        <h3><a href="">玉猪龙</a></h3>
+                        <h3><a href="" style="color:rgba(0,0,0,.8)">玉猪龙</a></h3>
                         <p>
                             我国古代对发现于红山等地的一种玉器的称呼，又名玉兽玦。
                         </p>
@@ -101,7 +101,7 @@
     </div>
     <div class="section-layout-right" style="width:435px;">
         <div class="section-title" style="width:409px;margin-bottom:55px;">
-            <h3>我要册展 <p>Curating</p></h3>
+            <h3>我要策展 <p>Curating</p></h3>
             <p style="margin:0"><a ui-sref="Wiki">更多>></a></p>
             <button class="goAlbum">开始！</button>
         </div>
@@ -152,7 +152,7 @@
     <div class="collection swiper-container" style="height:128px;">
         <ul class="swiper-wrapper">
             <li class="swiper-slide" ng-repeat="i in data.culList" repeat-done="swiper()">
-                <a ui-sref="collectiondetails({type:(i.mipOpenCulturalrelicInfo.collectionType?'Relic':'specimen'),id:i.mipOpenCulturalrelicInfo.id})">
+                <a target="_blank" ui-sref="collectiondetails({type:(i.mipOpenCulturalrelicInfo?'Relic':'specimen'),id:i.mipOpenCulturalrelicInfo.id})">
                     <img ng-src="{{i.picture.thumb3}}" width="192" height="128" alt="">
                 </a>
             </li>
