--- a/template/museum.html
+++ b/template/museum.html
@@ -1,4 +1,4 @@
-<div class="museum">
-    <img src="img/museum-banner.png" alt="">
+<div class="museum" ng-controller="Museum">
+    <img ng-src="{{imgUrlarr[1].carList[0].pic.backUrl}}" width="1200" height="120" alt="">
     <div ui-view></div>
 </div>
