--- a/css/digitization.css
+++ b/css/digitization.css
@@ -19,7 +19,7 @@ time, mark, audio, video {
   margin: 0;
   padding: 0;
   border: 0;
-  font-family: "Microsoft YaHei UI";
+  font-family: "Microsoft YaHei UI","微软雅黑",Arial, Helvetica, sans-serif;
   font-size: 16px;
   vertical-align: bottom; }
 
