--- a/css/index.css
+++ b/css/index.css
@@ -19,7 +19,7 @@ time, mark, audio, video {
   margin: 0;
   padding: 0;
   border: 0;
-  font-family: "Microsoft YaHei UI";
+  font-family: "Microsoft YaHei UI","微软雅黑",Arial, Helvetica, sans-serif;
   font-size: 16px;
   vertical-align: bottom; }
 
@@ -256,7 +256,6 @@ footer {
 .swiper-slide {
   text-align: center; }
   .swiper-slide a {
-    display: block;
     width: 192px;
     height: 128px; }
     .swiper-slide a img {
@@ -284,7 +283,7 @@ footer {
     float: right;
     font-size: 12px;
     margin-right: 27px;
-    line-height: 15px; }
+    line-height: 22px; }
 
 .section {
   padding: 30px 56px 0 54px;
