--- a/css/reset.scss
+++ b/css/reset.scss
@@ -2,7 +2,6 @@
    v2.0 | 20110126
    License: none (public domain)
 */
-
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -19,38 +18,47 @@ time, mark, audio, video {
   margin: 0;
   padding: 0;
   border: 0;
-  font-family: "Microsoft YaHei UI";
+  font-family: "Microsoft YaHei UI","微软雅黑",Arial, Helvetica, sans-serif;;
+  //font-family: "Microsoft YaHei UI";
   font-size: 16px;
   vertical-align: bottom;
 }
+
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
   display: block;
 }
+
 body {
   line-height: 1;
-  background:#eee;
+  background: #eee;
 }
+
 ol, ul {
   list-style: none;
 }
+
 blockquote, q {
   quotes: none;
 }
+
 blockquote:before, blockquote:after,
 q:before, q:after {
   content: '';
   content: none;
 }
+
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
-input{
-  outline:none;
+
+input {
+  outline: none;
 }
-button{
+
+button {
   font-family: "Microsoft YaHei UI";
   outline: none;
 }
