--- a/template/album.html
+++ b/template/album.html
@@ -1,4 +1,4 @@
-<img src='img/museum-banner.png' alt="">
+<img  ng-src="{{imgUrlarr[5].carList[0].pic.backUrl}}" width="1200" height="120" alt="">
 <div class="ablum">
     <p class="breadcrumb">
         <a ui-sref="home">首页</a><u>&gt;&gt;</u><span>策展列表</span>
