--- a/template/digitization.html
+++ b/template/digitization.html
@@ -1,5 +1,5 @@
 <div class="digization">
-    <img src="img/collection.png" alt="">
+    <img  ng-src="{{imgUrlarr[3].carList[0].pic.backUrl}}" width="1200" height="120" alt="">
     <p class="breadcrumb">
         <a ui-sref="home">首页</a><u>&gt;&gt;</u><a ui-sref="digitization">数字展厅</a><u ng-show="conditions.orgId">&gt;&gt;</u><span ng-show="conditions.orgId" ng-bind="museum"></span>
     </p>
