--- a/template/display.html
+++ b/template/display.html
@@ -1,4 +1,4 @@
-<img src="img/museum-banner.png" alt="">
+<img ng-src="{{imgUrlarr[2].carList[0].pic.backUrl}}" width="1200" height="120" alt="">
 <div class="display">
     <div class="breadcrumb">
         <a ui-sref="home">首页</a><u>&gt;&gt;</u><a ui-sref="display">展览</a>
