--- a/template/header.html
+++ b/template/header.html
@@ -22,7 +22,7 @@
 </div>
 <div class="header-bottom">
     <a ui-sref="home" class="heaer-logo">
-        <img src="img/logo.png" alt="" style="margin-left:24px;padding-bottom:20px">
+        <img src="img/logo.png" alt="" style="padding-top:11px" width="174px" height="50px;">
     </a>
     <nav>
         <ul>
