--- a/template/index_v_1.0.html
+++ b/template/index_v_1.0.html
@@ -1,8 +1,8 @@
 <div class="slider">
     <ul>
-        <li ng-repeat="slide in slides" repeat-done="slider()">
+        <li ng-repeat="slide in imgUrlarr[0].carList" repeat-done="slider()">
             <a href="">
-                <img ng-src="{{slide.ur}}" width="1200" style="margin:auto;">
+                <img ng-src="{{slide.pic.backUrl}}" width="1200" style="margin:auto;">
             </a>
         </li>
     </ul>
@@ -152,7 +152,7 @@
     <div class="collection swiper-container" style="height:128px;">
         <ul class="swiper-wrapper">
             <li class="swiper-slide" ng-repeat="i in data.culList" repeat-done="swiper()">
-                <a target="_blank" ui-sref="collectiondetails({type:(i.mipOpenCulturalrelicInfo?'Relic':'specimen'),id:i.mipOpenCulturalrelicInfo.id})">
+                <a target="_blank" ui-sref="collectiondetails({type:(i.mipOpenCulturalrelicInfo?'Relic':'specimen'),id:i.mipOpenCulturalrelicInfo.id||i.mipOpenFossilInfo.id})">
                     <img ng-src="{{i.picture.thumb3}}" width="192" height="128" alt="">
                 </a>
             </li>
