--- a/template/login.html
+++ b/template/login.html
@@ -17,7 +17,7 @@
             </div>
             <div class="login_user">
                 <label for="userpwd" class="userpwdicon"></label>
-                <input ng-trim="true" type="password" name="userpwd" ng-model="userpwd" id="userpwd" placeholder="请输入密码">
+                <input type="password" name="userpwd" ng-model="userpwd" id="userpwd" placeholder="请输入密码">
                 <!--<span>-->
                     <!--<i class="error"></i><u>错误消息</u>-->
                 <!--</span>-->
